data/derived/comb/progs/unify/prog5719.ml.out
Characters 84-86:
  | Sine(e1) -> sin (eval e1 x y);;
                          ^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
